Closed
Bug 41862
Opened 25 years ago
Closed 25 years ago
nsEditor::CloneAttributes should not use undoable transactions if target element isn't in document
Categories
(Core :: DOM: Editor, defect, P3)
Tracking
()
VERIFIED
FIXED
M16
People
(Reporter: cmanske, Assigned: cmanske)
Details
(Whiteboard: nsbeta2)
Attachments
(1 file)
|
1.89 KB,
patch
|
Details | Diff | Splinter Review |
Change nsEditor::CloneAttributes(nsIDOMNode *aDestNode, nsIDOMNode *aSourceNode)
to test if aDestNode is in the current document. If it isn't, we should go
through the transaction system.
| Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → M18
| Assignee | ||
Comment 3•25 years ago
|
||
Sorry, forgot to assign it to me when created.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•25 years ago
|
||
| Assignee | ||
Comment 5•25 years ago
|
||
After thinking about this bug, it is an important architecture issue.
If we don't fix this, the setting attributes on an element before it is
inserted in the page will still use the transaction system, which is shouldn't.
This will through off the undo stack so undo won't undo the last real action
and the user will be confused. There is also the risk of crashing since the
saved undo information won't point to elements in the page and undo/redo may
try to access released elements.
The fix is very straightforward -- it is attached.
Nominating for beta2 -- I've already discussed the issues with beppe and she
agrees it should be considered.
Whiteboard: nsbeta2
Target Milestone: M18 → M16
| Assignee | ||
Comment 6•25 years ago
|
||
Approved to checkin by beppe.
| Assignee | ||
Comment 7•25 years ago
|
||
Checked in last week.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 9•25 years ago
|
||
Traced through along the 2 possible code paths and it looks good.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•